telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestDuplicatedModifiersClass.java
package main;

public final strictfp class Main {

	public static void main(String argv[]){
		
	}
	
}
