telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestMethodModifFail4.java
class A {}
class B {
	public final abstract void test(int var){}
}
